# CG-2021

./: .gitignore
3d-1/: build.gradle  pom.xml  readme.md
3d-1/src/main/java/: module-info.java
3d-1/src/main/java/com/nocmok/opengl/_3d/: Launcher.java  Main.java
3d-1/src/main/resources/: About.txt
3d-1/src/main/resources/layout/: cube_demo_layout.fxml  dog_demo_layout.fxml  dumb_demo_layout.fxml  human_demo_layout.fxml  main_layout.fxml  tetrahedron_demo_layout.fxml
curves/: build.gradle
curves/src/main/java/: module-info.java
curves/src/main/java/com/nocmok/opengl/curve/: Launcher.java  Main.java
curves/src/main/resources/: About.txt
curves/src/main/resources/layout/: bezier_curve_demo_layout.fxml  bezier_spline_demo_layout.fxml  bspline_curve_demo_layout.fxml  bspline_demo_layout.fxml  casteljau_curve_demo_layout.fxml  casteljau_spline_demo_layout.fxml  linear_interpolation_demo_layout.fxml  main_layout.fxml
fill-clipping/: build.gradle
fill-clipping/src/main/java/: module-info.java
fill-clipping/src/main/java/com/nocmok/opengl/fillclip/: Launcher.java  Main.java
fill-clipping/src/main/resources/: About.txt
fill-clipping/src/main/resources/layout/: clipping_demo_layout.fxml  main_layout.fxml  polygon_filling_demo_layout.fxml
glfw-hello-world/: CMakeLists.txt  main.cpp
primitives/: build.gradle  readme.md
primitives/src/main/java/: module-info.java
primitives/src/main/resources/: About.txt
primitives/src/main/resources/layout/: main_layout.fxml
triangles/: CMakeLists.txt  glad.c  main.cpp  util.cpp
triangles/include/: util.h
(+138 files in other folders)
